--- a/style.css
+++ b/style.css
@@ -34,27 +34,28 @@ header {
     border: red 2px solid;
 }
 #enemy1 {
-  width: 60px; /* Adjust the width as needed */
+  width: 50px; /* Adjust the width as needed */
   aspect-ratio: 10 / 10; /* Maintain the sprite's aspect ratio */
   background-image: url("./sprites/cat.png");
-  background-position: 7% 30%; /* Align with the top-right cat */
-  background-size: 1650% 800%; /* Scale to match the number of sprites */
+  background-position: 7.7% 30%; /* Align with the top-right cat */
+  background-size: 2500% 1100%;  /* Scale to match the number of sprites */
   image-rendering: pixelated; /* Ensure sharp pixels for retro look */
   position: absolute;
   border: red 2px solid;
 }
 #enemy2 {
-  width: 60px; /* Adjust the width as needed */
+  width: 50px; /* Adjust the width as needed */
   aspect-ratio: 10 / 10; /* Maintain the sprite's aspect ratio */
   background-image: url("./sprites/cat.png");
-  background-position: 40% 30%; /* Align with the top-right cat */
-  background-size: 1650% 800%; /* Scale to match the number of sprites */
+  background-size: 2500% 1100%; 
+  background-position: 33.8% 30%; /* Align with the top-right cat */
+  /* background-size: 1650% 800%; Scale to match the number of sprites */
   image-rendering: pixelated; /* Ensure sharp pixels for retro look */
   position: absolute;
   border: red 2px solid;
 }
 
-#enemy3 {
+/* #enemy3 {
   width: 32px;
   aspect-ratio: 16/20;
   background-image: url("./sprites/Character\ 7.png");
@@ -62,5 +63,5 @@ header {
   image-rendering: pixelated;
   position: absolute;
    border: red 2px solid;
-}
+} */
 
