--- a/style.css
+++ b/style.css
@@ -15,6 +15,13 @@ header {
   /* font-family: "Arcade Rounded", sans-serif; */
 }
 
+h3 {
+  font-size: 2em;
+}
+header h4 {
+  margin-bottom: 0%;
+}
+
 #gamefield {
   width: 600px;
   height: 500px;
