--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
   display: grid;
   justify-items: center;
   text-align: center;
+  font-family: "ArcadeClassic", sans-serif;
+  font-family: "Arcade Interlaced", sans-serif;
 }
 
 header {
@@ -11,64 +13,103 @@ header {
   color: rgba(60, 171, 60, 0.998);
   font-family: "ArcadeClassic", sans-serif;
   font-family: "Arcade Interlaced", sans-serif;
+
   /* font-family: "Arcade Normal", sans-serif; */
   /* font-family: "Arcade Rounded", sans-serif; */
 }
 
 h3 {
   font-size: 2em;
+  margin-bottom: 0;
 }
 header h4 {
   margin-bottom: 0%;
 }
 
+#UI {
+  position: relative;
+  color: rgba(60, 171, 60, 0.998);
+  display: flex;
+  gap: 370px;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+#btn-playState {
+  font-family: "ArcadeClassic", sans-serif;
+  font-size: 25px;
+  font-weight: 600;
+  padding: 2px 10px;
+  border: 3px rgba(146, 144, 20, 0.925) double;
+  cursor: pointer;
+  background-color: rgb(255, 255, 0);
+  box-shadow: 0px 0px 5px 1px #9c9206;
+}
+
+#points {
+  font-size: 15px;
+  color: rgba(60, 171, 60, 0.998);
+  margin: 0;
+}
+
 #gamefield {
+  border-collapse: collapse;
+  position: relative;
   display: grid;
-  width: 600px;
-  height: 600px;
+  width: calc(var(--width) * 1px);
+  height: calc(var(--height) * 1px);
+  /* width: 700px; */
+  /* height: 700px; */
   /* border: red 5px double; */
   box-shadow: 0px 0px 10px 5px #323232;
   background-color: rgb(40, 40, 40);
-
 }
 
 #background {
   display: grid;
   grid-area: 1 /2;
-  grid-template-columns: repeat(var(--GRID_WIDTH), max-content);
+  grid-template-columns: repeat(var(--GRID_WIDTH), var(--TILE_SIZE));
+   /* border: rgb(251, 255, 0) 2px dotted; */
+  /* grid-template-rows: repeat(var(--GRID_HEIGHT), var(--TILE_SIZE)); */
+  /* grid-template-columns: repeat(var(--GRID_WIDTH), max-content); */
 }
 
 #background .tile {
   width: calc(var(--TILE_SIZE) * 1px);
+
+  /* width: 32px; */
   aspect-ratio: 1 / 1;
   background-repeat: no-repeat;
   background-size: 100%;
   image-rendering: pixelated;
+   /* border: rgb(25, 0, 255) 2px dotted; */
 
-  /* background-image: url('sprites/tiles/floor_planks.png'); */
+  /* background-image: url('images/tiles/floor_planks.png'); */
 }
 
 #background .tile.wall {
-  background-image: url("./sprites/tiles/wall.png");
+  background-image: url("./images/tiles/wall.png");
 }
 
 #background .tile.floor {
-  background-image: url("./sprites/tiles/floor_planks.png");
+  background-image: url("./images/tiles/floor_planks.png");
 }
 
 #background .tile.mouseDoor {
-  /* background-image: url("./sprites/tiles/gate.png"); */
-  background-image: url("./sprites/tiles/door.png");
+  /* background-image: url("./images/tiles/gate.png"); */
+  background-image: url("./images/tiles/door.png");
 }
 
 #background .tile.grass {
-  background-image: url("./sprites/tiles/flowers.png");
+  background-image: url("./images/tiles/flowers.png");
 }
 
 .player {
   width: 15px;
   aspect-ratio: 12/20;
-  background-image: url("./sprites/mouse.png");
+  background-image: url("./images/mouse.png");
   background-position: 10% 70%;
   background-size: 600% 600%;
   image-rendering: pixelated;
@@ -79,9 +120,9 @@ header h4 {
 .enemy1 {
   width: 50px;
   aspect-ratio: 10 / 10;
-  background-image: url("./sprites/cat.png");
+  background-image: url("./images/cat.png");
   background-position: 7.7% 30%; /* Align with the top-right cat */
-  background-size: 2500% 1100%; /* Scale to match the sprites */
+  background-size: 2500% 1100%; /* Scale to match the images */
   image-rendering: pixelated;
   position: absolute;
   border: red 2px dotted;
@@ -90,7 +131,7 @@ header h4 {
 .enemy2 {
   width: 50px;
   aspect-ratio: 10 / 10;
-  background-image: url("./sprites/cat.png");
+  background-image: url("./images/cat.png");
   background-size: 2500% 1100%;
   background-position: 33.8% 30%;
   image-rendering: pixelated;
@@ -101,7 +142,7 @@ header h4 {
 .enemy3 {
   width: 30px;
   aspect-ratio: 16/20;
-  background-image: url("./sprites/Character\ 7.png");
+  background-image: url("./images/Character\ 7.png");
   background-size: 400% 400%;
   image-rendering: pixelated;
   position: absolute;
