--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ header h4 {
   display: grid;
   grid-area: 1 /2;
   grid-template-columns: repeat(var(--GRID_WIDTH), var(--TILE_SIZE));
-   /* border: rgb(251, 255, 0) 2px dotted; */
+  /* border: rgb(251, 255, 0) 2px dotted; */
   /* grid-template-rows: repeat(var(--GRID_HEIGHT), var(--TILE_SIZE)); */
   /* grid-template-columns: repeat(var(--GRID_WIDTH), max-content); */
 }
@@ -84,7 +84,7 @@ header h4 {
   background-repeat: no-repeat;
   background-size: 100%;
   image-rendering: pixelated;
-   /* border: rgb(25, 0, 255) 2px dotted; */
+  /* border: rgb(25, 0, 255) 2px dotted; */
 
   /* background-image: url('images/tiles/floor_planks.png'); */
 }
@@ -106,6 +106,11 @@ header h4 {
   background-image: url("./images/tiles/flowers.png");
 }
 
+.highlight {
+  outline: 2px dashed yellow;
+  translate: 0 0;
+}
+
 .player {
   width: 15px;
   aspect-ratio: 12/20;
@@ -114,7 +119,23 @@ header h4 {
   background-size: 600% 600%;
   image-rendering: pixelated;
   position: absolute;
-  border: red 2px dotted;
+  /* border: rgb(217, 255, 0) 2px dotted; */
+  /* outline: red 2px dotted; */
+}
+
+.show-rect {
+  outline: red 2px dotted;
+}
+
+.show-reg-point::before {
+  content: "";
+  position: absolute;
+  background-color: chartreuse;
+
+  width: 3px;
+  height: 3px;
+
+  translate: var(--regX) var(--regY);
 }
 
 .enemy1 {
@@ -125,7 +146,7 @@ header h4 {
   background-size: 2500% 1100%; /* Scale to match the images */
   image-rendering: pixelated;
   position: absolute;
-  border: red 2px dotted;
+  /* border: red 2px dotted; */
 }
 
 .enemy2 {
@@ -136,7 +157,7 @@ header h4 {
   background-position: 33.8% 30%;
   image-rendering: pixelated;
   position: absolute;
-  border: red 2px dotted;
+  /* border: red 2px dotted; */
 }
 
 .enemy3 {
@@ -146,5 +167,5 @@ header h4 {
   background-size: 400% 400%;
   image-rendering: pixelated;
   position: absolute;
-  border: red 2px dotted;
+  /* border: red 2px dotted; */
 }
