--- a/style.css
+++ b/style.css
@@ -130,12 +130,13 @@ header h4 {
 .show-reg-point::before {
   content: "";
   position: absolute;
-  background-color: chartreuse;
+  background-color: rgb(0, 0, 0);
+  /* background-color: rgb(23, 206, 212); */
 
-  width: 3px;
-  height: 3px;
-
-  translate: var(--regX) var(--regY);
+  width: 5px;
+  height: 5px;
+  /* transform: translate(calc(var(--regX)), calc(var(--regY))); */
+  /* translate: var(--regX) var(--regY); */
 }
 
 .enemy1 {
